Set default language to english

--- a/code_and_sample.html
+++ b/code_and_sample.html
@@ -657,7 +657,7 @@ Response.Widgets.Calendar = (function () {
                     PRIVATE.calendarHeaderElement = calendar;
                 },
                 type: type,
-                language: "nb",
+                language: "en",
                 theme: theme,
                 size: "normal",
                 multiple: multiple,
